--- a/src/style.css
+++ b/src/style.css
@@ -64,22 +64,42 @@
     flex-direction: column;
     justify-content: center;
     color: white;
-    padding-bottom: 20vh;
     font-family: 'Poppins', sans-serif;
 
 }
 .my-home-page span{
-    font-size: 5rem;
+    font-size: 2.5rem;
     font-weight: 600;
 }
 .my-home-page p{
-   font-size: 3rem;
+   font-size: 1.5rem;
    font-weight: 400;
 }
 .my-home-page .btn{
     width: fit-content;
     margin: auto;
-    font-size: 3rem;
-    border: 0.25rem solid #20C997;
+    font-size: 1.5rem;
+    border: 0.2rem solid #20C997;
     padding: 0.8rem 3rem;
+}
+.bounce {
+    -moz-animation: bounce 2s infinite;
+    -webkit-animation: bounce 2s infinite;
+    animation: bounce 2s infinite;
+  }
+  
+  @keyframes bounce {
+    0%, 20%, 50%, 80%, 100% {
+      transform: translateY(0);
+    }
+    40% {
+      transform: translateY(-30px);
+    }
+    60% {
+      transform: translateY(-15px);
+    }
+}
+.arrow{
+    color: white;
+    font-size: 3rem !important;
 }
