--- a/src/style.css
+++ b/src/style.css
@@ -1,65 +1,78 @@
 /* Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 /* Nav-Bar */
-.my-navbar-brand{
+.my-navbar-brand {
     font-family: 'Poppins', sans-serif;
     font-size: 2rem;
 }
-.my-nav-bar a{
+
+.my-nav-bar a {
     color: white !important;
 }
-.my-nav-bar:hover .nav-link{ 
-    opacity:0.9 ;
-    filter:blur(0.05rem) ;
+
+.my-nav-bar:hover .nav-link {
+    opacity: 0.9;
+    filter: blur(0.05rem);
 }
-.my-nav-bar .nav-link:hover{
+
+.my-nav-bar .nav-link:hover {
     color: #20C896 !important;
-    opacity:1 !important;
-    filter:blur(0) !important;
+    opacity: 1 !important;
+    filter: blur(0) !important;
 }
-.my-nav-bar .active{
+
+.my-nav-bar .active {
     color: #20C896 !important;
-    opacity:1;
-    filter:blur(0);
+    opacity: 1;
+    filter: blur(0);
 }
-.my-nav-bar .navbar-brand:hover{
+
+.my-nav-bar .navbar-brand:hover {
     color: white;
 }
-.hidden{
+
+.hidden {
     visibility: hidden;
 }
-.my-nav-icon.active{
+
+.my-nav-icon.active {
     color: white !important;
 }
-#facebook:hover{
-    color: 	#4267B2 !important;
-    opacity:1 !important;
-    filter:blur(0) !important;
+
+#facebook:hover {
+    color: #4267B2 !important;
+    opacity: 1 !important;
+    filter: blur(0) !important;
 }
-#linkedin:hover{
-    color:  #0A66C2 !important;
-    opacity:1 !important;
-    filter:blur(0) !important;
+
+#linkedin:hover {
+    color: #0A66C2 !important;
+    opacity: 1 !important;
+    filter: blur(0) !important;
 }
-#github:hover{
+
+#github:hover {
     color: #a5a2a2 !important;
-    opacity:1 !important;
-    filter:blur(0) !important;
+    opacity: 1 !important;
+    filter: blur(0) !important;
 }
+
 /* Back-ground */
-.my-background{
-    background-image: linear-gradient(rgba(0, 0, 0, 0.365),black),url("./images/back-ground.jpg");
+.my-background {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.365), black), url("./images/back-ground.jpg");
     background-size: 100% 100vh;
     background-attachment: fixed;
     background-repeat: no-repeat;
     padding-left: 0;
     padding-right: 0;
 }
+
 /* HomePage */
-.my-home-page{
+.my-home-page {
     text-align: center;
-    height: 90vh;
-   
+    height: 92vh;
+
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -67,93 +80,147 @@
     font-family: 'Poppins', sans-serif;
 
 }
-.my-home-page span{
+
+.my-home-page span {
     font-size: 2.5rem;
     font-weight: 600;
 }
-.my-home-page p{
-   font-size: 1.5rem;
-   font-weight: 400;
+
+.my-home-page p {
+    font-size: 1.5rem;
+    font-weight: 400;
 }
-.my-home-page .btn{
+
+.my-home-page .btn {
     width: fit-content;
     margin: auto;
     font-size: 1.5rem;
     border: 0.2rem solid #20C997;
     padding: 0.8rem 3rem;
 }
+
 .bounce {
     -moz-animation: bounce 2s infinite;
     -webkit-animation: bounce 2s infinite;
     animation: bounce 2s infinite;
-  }
-  
-  @keyframes bounce {
-    0%, 20%, 50%, 80%, 100% {
-      transform: translateY(0);
+}
+
+@keyframes bounce {
+
+    0%,
+    20%,
+    50%,
+    80%,
+    100% {
+        transform: translateY(0);
     }
+
     40% {
-      transform: translateY(-30px);
+        transform: translateY(-30px);
     }
+
     60% {
-      transform: translateY(-15px);
+        transform: translateY(-15px);
     }
 }
-.arrow{
+
+.arrow {
     color: white;
     font-size: 3rem !important;
 }
 
 /*About Page */
-.my-about-page{
-    background-color: #212529;
-    padding: 3% 20% 3% 20%;
-}
-.my-about-page h2{
-    color: white;
+.my-about-page .title-div {
     text-align: center;
-    position: relative;
-    z-index: 100;
-    bottom: 3rem;
-    font-size: 2rem;
-   display: inline-block;
-   padding-bottom: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
-    
-.my-about-page h2:after {
+
+.my-about-page .title {
+    color: white;
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin-top: auto;
+    margin-bottom: auto;
+    font-size: 3rem;
+}
+
+.my-about-page .title:after {
     content: '';
-    position:absolute;
-    bottom:0;
-    margin-top: 3rem;
-    left: 47%;
-    right: 47%;
-    height: 0.2rem;
-    background:#20C997;
-    display:block;
-    }
-.my-about-page h1{
-    color: white;
-    text-align: center;
-    position: relative;
-    z-index: 1;
+    height: 2px;
+    width: calc(4vw + 6rem);
+    background: #20C997;
+    position: absolute;
     margin: auto;
-    top: 1rem;
-    color: #292D32;
-    font-size: 5rem;
-    width: fit-content;
+    bottom: -5px;
+    left: 0;
+    right: 0;
 }
-.my-about-page h3{
+
+.my-about-page .back-title {
+    color: #292D32 !important;
+    font-size: calc(1.95rem + 6vw) !important;
+    font-weight: 700;
+}
+
+.my-about-page {
+    background-color: #212529;
+    padding: 3% 20% 7% 20%;
+    
+}
+
+.my-about-page .desc-title {
     color: white;
     font-size: 1.5rem;
     width: fit-content;
 }
 
-.my-about-page p{
+.my-about-page .desc-text {
     color: #909294;
     font-size: 1rem;
     width: 83%;
 }
-.my-about-page h4{
+
+.my-about-page a {
+    text-decoration: none;
+    color: #20C896;
+}
+
+.my-about-page a:hover {
+    text-decoration: none;
+    color: #128c6774;
+}
+
+.my-about-page .btn {
+    width: fit-content;
+    margin: auto;
+    font-size: 1rem;
+    background-color: #1BAA80;
+    font-weight: 500;
+    padding: 0.8rem 3rem;
+}
+
+.my-about-page .btn:hover {
+    width: fit-content;
+    margin: auto;
+    font-size: 1rem;
+    background-color: #0b443384;
+    font-weight: 500;
+    padding: 0.8rem 3rem;
+}
+.my-about-page .stats-title {
+    color: #909294;
+    font-size: 4rem;
+    font-weight: 500;
+}
+
+.my-about-page .stats-desc {
+    color: white;
+}
+
+.my-about-page .my-info{
     color: white;
     font-size: 1rem;
     border: 0.1rem solid #90929472;
@@ -163,15 +230,123 @@
     width: 80%;
     padding-bottom: 1rem;
 }
-.my-about-page a{
+
+.my-about-page .stats-1 {
+    text-align: center;
+    border: solid #90929472;
+    border-width: 0 0.1rem 0 0;
+}
+.my-about-page .stats-2 {
+    text-align: center;
+    border: solid #90929472;
+   border-width: 0 0.1rem 0 0;
+}
+.my-about-page .stats-3 {
+    text-align: center;
+    border: solid #90929472;
+   border-width: 0 0.1rem 0 0;
+}
+.my-about-page .stats-4 {
+  border: none;
+  text-align: center;
+}
+@media only screen and (max-width: 992px) {
+    .my-about-page .stats-1 {
+        border: solid #90929472;
+        border-width: 0 0.1rem 0.1rem 0;
+    }
+    .my-about-page .stats-2 {
+        border: solid #90929472;
+        border-width: 0 0 0.1rem 0;
+    }
+    .my-about-page .stats-3 {
+        border: solid #90929472;
+        border-width: 0 0.1rem 0 0;
+    }
+    .my-about-page .stats-4 {
+        border: none;
+    }
+  }
+
+/* Services */
+
+.my-services-page {
+    background-color: #343A40;
+    padding: 3% 20% 3% 20%;
+}
+
+.my-services-page h2 {
+    color: white;
+    text-align: center;
+    position: relative;
+    z-index: 100;
+    bottom: 5rem;
+    font-size: 2rem;
+    display: inline-block;
+    padding-bottom: 1rem;
+}
+
+.my-services-page h2:after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    margin-top: 3rem;
+    left: 47%;
+    right: 47%;
+    height: 0.2rem;
+    background: #20C997;
+    display: block;
+}
+
+.my-services-page h1 {
+    color: #3E444A !important;
+    opacity: 1;
+    text-align: center;
+    position: relative;
+    z-index: 1;
+    margin: auto;
+    top: 1rem;
+    color: #292D32;
+    font-size: 8rem;
+    font-weight: 900;
+    width: fit-content;
+    word-break: break-all;
+}
+
+.my-services-page h3 {
+    color: white;
+    font-size: 1.5rem;
+    width: fit-content;
+}
+
+.my-services-page p {
+    color: #909294;
+    font-size: 1rem;
+    width: 83%;
+}
+
+.my-services-page h4 {
+    color: white;
+    font-size: 1rem;
+    border: 0.1rem solid #90929472;
+    border-top: 0;
+    border-right: 0;
+    border-left: 0;
+    width: 80%;
+    padding-bottom: 1rem;
+}
+
+.my-services-page a {
     text-decoration: none;
     color: #20C896;
 }
-.my-about-page a:hover{
+
+.my-services-page a:hover {
     text-decoration: none;
     color: #128c6774;
 }
-.my-about-page .btn{
+
+.my-services-page .btn {
 
     width: fit-content;
     margin: auto;
@@ -180,16 +355,21 @@
     font-weight: 500;
     padding: 0.8rem 3rem;
 }
-.my-about-page h5{
-  color: #909294;
-  font-size: 5rem;
-  font-weight: 500;
+
+.my-services-page h5 {
+    color: #909294;
+    font-size: 5rem;
+    font-weight: 500;
 }
-.my-about-page h6{
-  color:white;
+
+.my-services-page h6 {
+    color: white;
 }
-.my-border-right{
+
+.my-border-right {
     text-align: center;
-    border: 0.1rem solid #90929472 ;
-    border-top: 0; border-left: 0; border-bottom: 0;
+    border: 0.1rem solid #90929472;
+    border-top: 0;
+    border-left: 0;
+    border-bottom: 0;
 }
