--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,11 @@
 /* Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 /* App and general classes */
+@media only screen and (max-width: 576px) {
+    .my-app {
+        background-image: linear-gradient(rgba(0, 0, 0, 0.365), black), url("./images/back-ground-mob.jpg") !important;
+  }
+}
 .my-app {
     font-family: 'Poppins', sans-serif;
     background-image: linear-gradient(rgba(0, 0, 0, 0.365), black), url("./images/back-ground.jpg");
@@ -410,7 +415,6 @@
 }
 .gallery-nav-link:hover {
     color: #20C997;
-   
 }
 
 .gallery-nav-link.active:after {
